feat(be): implement JWT authentication (remove hardcoded secrets)