@@ -1,14 +1,10 @@
 package com.emms.backend.service;
 
-import com.emms.backend.dto.importData.MeterImportDTO;
 import com.emms.backend.dto.meter.MeterDTO;
 import com.emms.backend.dto.meter.MeterShowDTO;
 import com.emms.backend.dto.meter.MeterSummaryDTO;
 import com.emms.backend.entity.Asset;
-import com.emms.backend.entity.Location;
 import com.emms.backend.entity.Meter;
-import com.emms.backend.entity.MeterCategory;
-import com.emms.backend.entity.User;
 import com.emms.backend.exception.CustomException;
 import com.emms.backend.mapper.MeterMapper;
 import com.emms.backend.repository.MeterRepository;
@@ -17,166 +13,207 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class MeterService {
 
+    private static final int DEFAULT_UPDATE_FREQUENCY = 1;
+    private static final String DEFAULT_METER_NAME = "Runtime";
+    private static final String DEFAULT_METER_UNIT = "hours";
+
     private final MeterRepository meterRepository;
     private final MeterMapper meterMapper;
-    private final MeterCategoryService meterCategoryService;
-    private final FileService fileService;
-    private final LocationService locationService;
-    private final AssetService assetService;
-    private final UserService userService;
-    private final ReadingService readingService;
 
-    public MeterService(
-            MeterRepository meterRepository,
-            MeterMapper meterMapper,
-            MeterCategoryService meterCategoryService,
-            FileService fileService,
-            LocationService locationService,
-            AssetService assetService,
-            UserService userService,
-            ReadingService readingService
-    ) {
+    public MeterService(MeterRepository meterRepository, MeterMapper meterMapper) {
         this.meterRepository = meterRepository;
         this.meterMapper = meterMapper;
-        this.meterCategoryService = meterCategoryService;
-        this.fileService = fileService;
-        this.locationService = locationService;
-        this.assetService = assetService;
-        this.userService = userService;
-        this.readingService = readingService;
     }
 
-    public MeterShowDTO create(MeterDTO dto) {
-        validateCreate(dto);
-
-        Meter entity = new Meter();
-        meterMapper.updateMeter(entity, dto);
-
-        Asset asset = assetService.findEntityById(dto.getAssetId());
-        entity.setAsset(asset);
-
-        applyRelations(entity, dto);
-
-        Meter saved = meterRepository.save(entity);
-        return meterMapper.toShowDto(saved, readingService);
-    }
-
-    public MeterShowDTO update(Long id, MeterDTO dto) {
-        if (id == null) {
-            throw new CustomException("Meter id must not be null", HttpStatus.BAD_REQUEST);
-        }
-        if (dto == null) {
-            throw new CustomException("Meter data must not be null", HttpStatus.BAD_REQUEST);
-        }
-
-        Meter entity = meterRepository.findById(id)
-                .orElseThrow(() -> new CustomException("Meter not found", HttpStatus.NOT_FOUND));
-
-        meterMapper.updateMeter(entity, dto);
-
-        if (dto.getAssetId() != null) {
-            Asset asset = assetService.findEntityById(dto.getAssetId());
-            entity.setAsset(asset);
-        }
-
-        applyRelations(entity, dto);
-
-        Meter saved = meterRepository.save(entity);
-        return meterMapper.toShowDto(saved, readingService);
-    }
-
-    @Transactional(readOnly = true)
-    public MeterShowDTO getById(Long id) {
-        Meter entity = findEntityById(id);
-        return meterMapper.toShowDto(entity, readingService);
-    }
 
     @Transactional(readOnly = true)
     public Meter findEntityById(Long id) {
         if (id == null) {
-            throw new CustomException("Meter id must not be null", HttpStatus.BAD_REQUEST);
+            throw new CustomException("Id meter không hợp lệ", HttpStatus.BAD_REQUEST);
         }
 
         return meterRepository.findById(id)
-                .orElseThrow(() -> new CustomException("Meter not found", HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new CustomException("Không tìm thấy meter", HttpStatus.NOT_FOUND));
+    }
+
+    public Meter create(MeterDTO dto) {
+        if (dto == null) {
+            throw new CustomException("Dữ liệu meter không hợp lệ", HttpStatus.BAD_REQUEST);
+        }
+
+        Meter meter = new Meter();
+        meterMapper.updateEntityFromDto(dto, meter);
+
+        applyDefaultValues(meter);
+        normalize(meter);
+        validateForSave(meter);
+
+        return meterRepository.save(meter);
+    }
+
+    public Meter update(Long id, MeterDTO dto) {
+        if (id == null) {
+            throw new CustomException("Id meter không hợp lệ", HttpStatus.BAD_REQUEST);
+        }
+
+        if (dto == null) {
+            throw new CustomException("Dữ liệu meter không hợp lệ", HttpStatus.BAD_REQUEST);
+        }
+
+        Meter existing = findEntityById(id);
+        meterMapper.updateEntityFromDto(dto, existing);
+
+        applyDefaultValues(existing);
+        normalize(existing);
+        validateForSave(existing);
+
+        return meterRepository.save(existing);
     }
 
     @Transactional(readOnly = true)
-    public List<MeterShowDTO> getAll() {
+    public Meter getById(Long id) {
+        return findEntityById(id);
+    }
+
+    @Transactional(readOnly = true)
+    public MeterShowDTO getShowDtoById(Long id) {
+        return meterMapper.toShowDto(findEntityById(id));
+    }
+
+    @Transactional(readOnly = true)
+    public List<MeterShowDTO> getAllShowDtos() {
         return meterRepository.findAll()
                 .stream()
-                .map(meter -> meterMapper.toShowDto(meter, readingService))
-                .collect(Collectors.toList());
+                .map(meterMapper::toShowDto)
+                .toList();
     }
 
     @Transactional(readOnly = true)
-    public List<MeterSummaryDTO> getAllSummary() {
+    public List<MeterSummaryDTO> getAllSummaryDtos() {
         return meterRepository.findAll()
                 .stream()
                 .map(meterMapper::toSummaryDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void delete(Long id) {
-        Meter entity = findEntityById(id);
-        meterRepository.delete(entity);
+        Meter meter = findEntityById(id);
+        meterRepository.delete(meter);
     }
 
-    private void validateCreate(MeterDTO dto) {
-        if (dto == null) {
-            throw new CustomException("Meter data must not be null", HttpStatus.BAD_REQUEST);
-        }
-        if (dto.getName() == null || dto.getName().isBlank()) {
-            throw new CustomException("Meter name must not be blank", HttpStatus.BAD_REQUEST);
-        }
-        if (dto.getUpdateFrequency() == null || dto.getUpdateFrequency() < 1) {
-            throw new CustomException("Update frequency must be >= 1", HttpStatus.BAD_REQUEST);
-        }
-        if (dto.getAssetId() == null) {
-            throw new CustomException("Asset id must not be null", HttpStatus.BAD_REQUEST);
-        }
-    }
-
-    private void applyRelations(Meter entity, MeterDTO dto) {
-        if (dto == null) {
+    public void save(List<Meter> meters) {
+        if (meters == null || meters.isEmpty()) {
             return;
         }
 
-        if (dto.getMeterCategoryId() != null) {
-            MeterCategory meterCategory = meterCategoryService.findEntityById(dto.getMeterCategoryId());
-            entity.setMeterCategory(meterCategory);
+        meters.forEach(meter -> {
+            applyDefaultValues(meter);
+            normalize(meter);
+            validateForSave(meter);
+        });
+
+        meterRepository.saveAll(meters);
+    }
+
+
+    public void importMeter(Meter meter, Object dto) {
+        if (meter == null) {
+            throw new CustomException("Meter import không hợp lệ", HttpStatus.BAD_REQUEST);
         }
 
-        if (dto.getImageId() != null) {
-            // Sửa method này theo đúng kiểu entity file/image bạn đang dùng.
-            // Ví dụ:
-            // entity.setImage(fileService.findEntityById(dto.getImageId()));
+        applyDefaultValues(meter);
+        normalize(meter);
+        validateForSave(meter);
+
+        meterRepository.save(meter);
+    }
+
+    public void createDefaultMetersForAsset(Asset asset) {
+        if (asset == null || asset.getId() == null) {
+            return;
         }
 
-        if (dto.getLocationId() != null) {
-            Location location = locationService.findEntityById(dto.getLocationId());
-            entity.setLocation(location);
+        if (meterRepository.existsByAsset_Id(asset.getId())) {
+            return;
         }
 
-        if (dto.getUserIds() != null) {
-            List<User> users = dto.getUserIds().stream()
-                    .map(userService::findEntityById)
-                    .collect(Collectors.toList());
-            entity.setUsers(users);
+        Meter runtime = new Meter();
+        runtime.setName(DEFAULT_METER_NAME);
+        runtime.setUnit(DEFAULT_METER_UNIT);
+        runtime.setAsset(asset);
+
+
+        runtime.setUpdateFrequency(DEFAULT_UPDATE_FREQUENCY);
+
+        applyDefaultValues(runtime);
+        normalize(runtime);
+        validateForSave(runtime);
+
+        meterRepository.save(runtime);
+    }
+
+
+
+    private void applyDefaultValues(Meter meter) {
+        if (meter == null) {
+            return;
+        }
+
+        if (meter.getUpdateFrequency() == null || meter.getUpdateFrequency() < 1) {
+            meter.setUpdateFrequency(DEFAULT_UPDATE_FREQUENCY);
+        }
+
+        if (meter.getUsers() == null) {
+            meter.setUsers(List.of());
+        }
+
+        if (meter.getName() == null || meter.getName().isBlank()) {
+            meter.setName(DEFAULT_METER_NAME);
+        }
+
+        if (meter.getUnit() == null || meter.getUnit().isBlank()) {
+            meter.setUnit(DEFAULT_METER_UNIT);
         }
     }
 
-    public void importMeter(Meter entity, MeterImportDTO dto) {
-        throw new UnsupportedOperationException("Unimplemented method 'importMeter'");
+    private void normalize(Meter meter) {
+        if (meter == null) {
+            return;
+        }
+
+        if (meter.getName() != null) {
+            meter.setName(meter.getName().trim());
+        }
+
+        if (meter.getUnit() != null) {
+            meter.setUnit(meter.getUnit().trim());
+        }
+
+        if (meter.getUpdateFrequency() == null || meter.getUpdateFrequency() < 1) {
+            meter.setUpdateFrequency(DEFAULT_UPDATE_FREQUENCY);
+        }
     }
 
-    public void save(List<Meter> entities) {
-        throw new UnsupportedOperationException("Unimplemented method 'save'");
+    private void validateForSave(Meter meter) {
+        if (meter == null) {
+            throw new CustomException("Meter không hợp lệ", HttpStatus.BAD_REQUEST);
+        }
+
+        if (meter.getName() == null || meter.getName().isBlank()) {
+            throw new CustomException("Tên meter không được để trống", HttpStatus.BAD_REQUEST);
+        }
+
+        if (meter.getAsset() == null || meter.getAsset().getId() == null) {
+            throw new CustomException("Meter phải gắn với asset hợp lệ", HttpStatus.BAD_REQUEST);
+        }
+
+        if (meter.getUpdateFrequency() == null || meter.getUpdateFrequency() < 1) {
+            throw new CustomException("updateFrequency phải >= 1", HttpStatus.BAD_REQUEST);
+        }
     }
 }
